--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,20 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	// https://mvnrepository.com/artifact/org.mybatis.spring.boot/mybatis-spring-boot-starter
+	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.2'
+	// https://mvnrepository.com/artifact/org.apache.commons/commons-dbcp2
+	implementation 'org.apache.commons:commons-dbcp2:2.9.0'
+	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-devtools
+	implementation 'org.springframework.boot:spring-boot-devtools:2.6.7'
+	// https://mvnrepository.com/artifact/mysql/mysql-connector-java
+	implementation 'mysql:mysql-connector-java:8.0.29'
+	implementation 'io.springfox:springfox-boot-starter:3.0.0'
+	
+	// https://mvnrepository.com/artifact/org.projectlombok/lombok
+	compileOnly 'org.projectlombok:lombok:1.18.24'
+	
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
