--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,5 @@ mybatis.mapper-locations=mapper/**/*.xml
 #log level Setting
 logging.level.root=info
 logging.level.com.yjh.foodFinder=debug
+
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
