--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,14 +2,25 @@
 spring.datasource.hikari.maximum-pool-size=4
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/foodfinder?serverTimezone=UTC&useUniCode=yes&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://localhost:3306/foodfinder?useSSL=false&serverTimezone=UTC&useUniCode=yes&characterEncoding=UTF-8&useLegacyDatetimeCode=false
 spring.datasource.username=root
 spring.datasource.password=Wlghks4463*
 spring.datasource.type=org.apache.commons.dbcp2.BasicDataSource
 
-#MyBatis Setting
-mybatis.type-aliases-package=com.yjh.foodFinder.model
-mybatis.mapper-locations=mapper/**/*.xml
+## Hibernate Properties
+# The SQL dialect makes Hibernate generate better SQL for the chosen database 
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
+spring.jpa.properties.hibernate.dialect.storage_engine=innodb
+spring.datasource.hikari.jdbc-url=jdbc:h2:mem://localhost/~/testdb;MODE=MYSQL
+
+## Hibernate Logging 
+logging.level.org.hibernate.SQL= DEBUG 
+# Initialize the datasource with available DDL and DML scripts 
+spring.datasource.initialization-mode=always 
+
+## Jackson Properties 
+spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS= false 
+spring.jackson.time-zone= UTC
 
 #log level Setting
 logging.level.root=info
