--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ dependencies {
 	
 	// https://mvnrepository.com/artifact/org.projectlombok/lombok
 	compileOnly 'org.projectlombok:lombok:1.18.24'
+	annotationProcessor 'org.projectlombok:lombok:1.18.24'
 	
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
@@ -62,17 +63,14 @@ task installReact(type: Exec) {
 	inputs.dir "$frontendDir"
 	group = BasePlugin.BUILD_GROUP
 	if (System.getProperty('os.name').toLowerCase(Locale.ROOT).contains('windows')) {
-		commandLine "npm.cmd", "audit", "fix"
-		commandLine "npm.cmd", "install"
+		commandLine "npm.cmd", "audit", "fix" commandLine 'npm.cmd', 'install'
 	} else {
-		commandLine "npm", "audit", "fix"
-		commandLine "npm", "install"
+		commandLine "npm", "audit", "fix" commandLine 'npm', 'install'
 	}
 }
 
 task buildReact(type: Exec) {
-	dependsOn "installReact"
-	workingDir "$frontendDir"
+	dependsOn "installReact" workingDir "$frontendDir"
 	inputs.dir "$frontendDir"
 	group = BasePlugin.BUILD_GROUP
 	if (System.getProperty('os.name').toLowerCase(Locale.ROOT).contains('windows')) {
