--- a/build.gradle
+++ b/build.gradle
@@ -44,34 +44,24 @@ test {
 	useJUnitPlatform()
 }
 
-def frontendDir = "$projectDir/frontend"
+def webappDir = "$projectDir/frontend"
 
 sourceSets {
 	main {
 		resources {
-			srcDirs = ["$projectDir/src/main/resources"]
+			srcDirs = ["$webappDir/build", "$projectDir/src/main/resources"]
 		}
 	}
 }
 
 processResources {
-	dependsOn "copyReactBuildFiles"
-}
-
-task installReact(type: Exec) {
-	workingDir "$frontendDir"
-	inputs.dir "$frontendDir"
-	group = BasePlugin.BUILD_GROUP
-	if (System.getProperty('os.name').toLowerCase(Locale.ROOT).contains('windows')) {
-		commandLine "npm.cmd", "audit", "fix" commandLine 'npm.cmd', 'install'
-	} else {
-		commandLine "npm", "audit", "fix" commandLine 'npm', 'install'
-	}
+	dependsOn "buildReact"
 }
 
 task buildReact(type: Exec) {
-	dependsOn "installReact" workingDir "$frontendDir"
-	inputs.dir "$frontendDir"
+	dependsOn "installReact"
+	workingDir "$webappDir"
+	inputs.dir "$webappDir"
 	group = BasePlugin.BUILD_GROUP
 	if (System.getProperty('os.name').toLowerCase(Locale.ROOT).contains('windows')) {
 		commandLine "npm.cmd", "run-script", "build"
@@ -80,8 +70,17 @@ task buildReact(type: Exec) {
 	}
 }
 
-task copyReactBuildFiles(type: Copy) {
-	dependsOn "buildReact"
-	from "$frontendDir/build"
-	into "$projectDir/src/main/resources/static"
+task installReact(type: Exec) {
+	workingDir "$webappDir"
+	inputs.dir "$webappDir"
+	group = BasePlugin.BUILD_GROUP
+	if (System.getProperty('os.name').toLowerCase(Locale.ROOT).contains('windows')) {
+		commandLine "npm.cmd", "audit", "fix"
+		commandLine 'npm.cmd', 'install'
+	} else {
+		commandLine "npm", "audit", "fix"
+		commandLine 'npm', 'install'
+	}
 }
+
+jar { duplicatesStrategy(DuplicatesStrategy.INHERIT) }
